--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "task_tracker_cli"
+name = "TODO_CLI"
 version = "0.0.1"
 requires-python = ">= 3.11"
 
 [project.scripts]
-task = "task_tracker_cli:main"
+TODO = "TODO_CLI:main"
